test/fail/issue874.mo
actor a {
  public func foo() {};
  let _ = a.foo();
}
